--- a/ush/templates/FV3.input.yml
+++ b/ush/templates/FV3.input.yml
@@ -109,6 +109,7 @@ FV3_HRRR:
     enh_mix : true
     dust_opt : 5
     drydep_opt : 1
+    coarsepm_settling : 1
     smoke_forecast : 0
     aero_ind_fdb : false
     aero_dir_fdb : false
@@ -116,9 +117,8 @@ FV3_HRRR:
     wetdep_ls_opt : 1
     do_plumerise : true
     plumerisefire_frq : 60
-    dust_alpha : 0.05
+    dust_alpha : 0.01
     dust_gamma : 1.3
-    wetdep_ls_alpha : 0.5
 
 FV3_RAP:
   atmos_model_nml:
