Use new lam fix (#509)
* Switch links in fix/lam/RRFS_CONUS_3km from RRFS_CONUS_3km_C3359 to RRFS_CONUS_3km_C3359_Lake_fracSV

* Add new namelist for RUCLSM with new high resolution lam fix files.
     diag_log = .true.
     mosaic_lu = 1
     mosaic_soil = 1
     isncond_opt = 2
     isncovr_opt = 3

--- a/ush/templates/FV3.input.yml
+++ b/ush/templates/FV3.input.yml
@@ -73,6 +73,7 @@ FV3_HRRR:
   gfs_physics_nml: 
     <<: *gsd_sar_phys
     cdmbgwd: [3.5, 1.0]
+    diag_log: true
     do_gsl_drag_ls_bl: true
     do_gsl_drag_ss: true
     do_gsl_drag_tofd: true
@@ -98,6 +99,10 @@ FV3_HRRR:
     iovr: 3
     ldiag_ugwp: false
     lgfdlmprad: false
+    mosaic_lu: 1
+    mosaic_soil: 1
+    isncond_opt: 2
+    isncovr_opt: 3
     sfclay_compute_flux: true
     thsfc_loc: false 
     # Smoke/dust options
