Set lightning_threat = .true. for output lightning threat indices. (#518)

--- a/ush/templates/FV3.input.yml
+++ b/ush/templates/FV3.input.yml
@@ -99,6 +99,7 @@ FV3_HRRR:
     iovr: 3
     ldiag_ugwp: false
     lgfdlmprad: false
+    lightning_threat: true
     mosaic_lu: 1
     mosaic_soil: 1
     isncond_opt: 2
