--- a/ush/templates/FV3.input.yml
+++ b/ush/templates/FV3.input.yml
@@ -48,6 +48,7 @@ FV3_HRRR:
     avg_max_length: 3600.
     ignore_rst_cksum: true
   fv_core_nml:
+    agrid_vel_rst: true
     d_con: 0.5
     d2_bg_k2: 0.04
     dz_min: 2.0
@@ -56,12 +57,12 @@ FV3_HRRR:
     hord_tm: 6
     hord_tr: 10
     hord_vt: 6
-    k_split: 6
+    k_split: 2
     kord_mt: 9
     kord_tm: -9
     kord_tr: 9
     kord_wz: 9
-    n_split: 3
+    n_split: 5
     psm_bc: 1
     nord_tr: 0
     nrows_blend: 10
@@ -84,7 +85,7 @@ FV3_HRRR:
     do_ugwp_v0 : false
     do_ugwp_v0_nst_only : false
     do_ugwp_v0_orog_only : false
-    dt_inner : 20
+    dt_inner : 36
     effr_in: true
     gwd_opt: 3
     fhlwr: 900.0
@@ -130,6 +131,7 @@ FV3_HRRR_gf:
     avg_max_length: 3600.
     ignore_rst_cksum: true
   fv_core_nml:
+    agrid_vel_rst: true
     d_con: 0.5
     d2_bg_k2: 0.04
     dz_min: 2.0
@@ -138,12 +140,12 @@ FV3_HRRR_gf:
     hord_tm: 6
     hord_tr: 10
     hord_vt: 6
-    k_split: 6
+    k_split: 2
     kord_mt: 9
     kord_tm: -9
     kord_tr: 9
     kord_wz: 9
-    n_split: 3
+    n_split: 5
     psm_bc: 1
     nord_tr: 0
     nrows_blend: 10
@@ -167,7 +169,7 @@ FV3_HRRR_gf:
     do_ugwp_v0 : false
     do_ugwp_v0_nst_only : false
     do_ugwp_v0_orog_only : false
-    dt_inner : 20
+    dt_inner : 36
     effr_in: true
     gwd_opt: 3
     fhlwr: 900.0
